minesweeper/css/main.css
/* .main-section {
  border: solid 2px black;
} */

body {
  background-image: url('https://i.imgur.com/ocxIOzf.jpg');
  background-size: cover;
}

main.row {
  /* height: 80%; */
  margin: 5px 0 0 0;
}

.title {
  writing-mode: vertical-rl;
  text-orientation: upright;
  /* text-align: center; */
  padding: 0;
  height: 100%;
  font-family: 'Rubik', sans-serif;
  margin: 0 auto;
}

@media (max-width: 550px) {
  .title {
    writing-mode: horizontal-tb;
    text-orientation: mixed;
    height: auto;
  }
}

.main-screen {
  height: 560px;
  padding: 0;
  position: relative;
}

caption {
  caption-side: bottom;
}

.table-caption-content {
  margin: 0;
  display: flex;
  justify-content: space-between;
}

.table-caption-content > p {
  display: inline-flex;
}

.timer {
  text-align: right;
}

.mine-counter {
  text-align: left;
}

table {
  border-collapse: collapse;
  text-align: center;
  vertical-align: middle;
  margin: auto;
  z-index: 2;
  /* opacity: 0.75; */
}

td {
  text-align: center;
  letter-spacing: 0;
  line-height: 18px;
  font-size: 18px;
  cursor: pointer;
  height: 20px;
  width: 20px;
  padding: 0;
  color: black;
  /* border: solid 1px #BDBDBD; 7B7B7B  5D5D5D  363636*/
  border: solid 2px #BDBDBD;
  background-color: #BDBDBD;
  box-shadow: inset -2px -2px #7B7B7B;
}

.game-end {
  cursor: default;
}

.flagged {
  background-image: url('https://i.imgur.com/Flqlztk.png');
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-position: center;
  background-size: 18px;
}

.clicked-mine {
  background-color: #000;
}

.mine {
  box-shadow: none;
  cursor: default;
  background-image: url('https://i.imgur.com/GfhvaKY.png');
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-position: center;
  background-size: 18px;
}

.shown {
  box-shadow: none;
  cursor: default;
}

.adjMines-1 {
  color: #4a1486;
  background-color: #e0ecf4;
}

.adjMines-2 {
  color: #4a1486;
  background-color: #bfd3e6;
}

.adjMines-3 {
  color: #6a51a3;
  background-color: #9ebcda;
}

.adjMines-4 {
  color: #6a51a3;
  background-color: #8c96c6;
}

.adjMines-5 {
  color: #dadaeb;
  background-color: #8c6bb1;
}

.adjMines-6 {
  color: #dadaeb;
  background-color: #88419d;
}

.adjMines-7 {
  color: #efedf5;
  background-color: #810f7c;
}

.adjMines-8 {
  color: #efedf5;
  background-color: #4d004b;
}

th:first-child, td:first-child {
  padding: 1px;
}

th:last-child, td:last-child {
  padding: 1px; 
}

nav.difficulty, nav.gameplay {
  display: none;
}

/* button.difficulty {
  background-color: #E57661;
}

button.gameplay {
  background-color: #F8C58C;
}

button.start-screen {
  background-color: #F8E7A2;
} */

.gameBoard-screen, .difficulty-screen {
  display: none;
}

.gameBoard-screen, .difficulty-screen, .instructions-screen {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.win-loss-message {
  overflow: hidden;
  white-space: nowrap;
  margin: 0 auto;
  font-family: 'Rubik', sans-serif;
  font-size: 40px;
  color: black;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: none;
  z-index: 100;
  animation: 
    typing 3.5s steps(40, end);
}

/* The typing effect */
@keyframes typing {
  from { width: 0 }
  to { width: 100% }
}

footer {
  height: 5%;
  text-align: center;
  font-size: 10px;
}

footer > p {
  display: inline-block;
  margin: 0;
}

